--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>フリマレジ</title>
+    <title>レジ電卓</title>
     
     <link rel="stylesheet" href="style.css">
 </head>
@@ -56,7 +56,7 @@
 </div>
 
 <div id="appVersion" style="text-align: center; color: #8e8e93; font-size: 12px; margin: 20px 0;">
-    Version 1.0.1
+    Version 1.0.2
 </div>
 
     <script src="script.js"></script>
